@@ -3,6 +3,7 @@
  - Add lines to XML document.
  - Add test of map validity.
  - Rewrite SEE ALSO section to new style.
+ - Update Module::Install to 1.16 version.
  - Update copyright years to 2015.
 
 0.03 2014-12-23T14:20:09+01:00
